mon/kibana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: mon
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start"
spec:
  tls:
  - hosts:
    - s.desertbluffs.com
  rules:
  - host: s.desertbluffs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5201
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-oauth2
  namespace: mon
spec:
  tls:
  - hosts:
    - s.desertbluffs.com
  rules:
  - host: s.desertbluffs.com
    http:
      paths:
      - path: /oauth2
        backend:
          serviceName: oauth2-proxy
          servicePort: oauth2-proxy
