mon/kibana/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kibana
  namespace: mon
spec:
  podSelector:
    matchLabels:
      app: kibana
  ingress:
  - ports:
    - port: 5601
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
